clusters/my-cluster/certs/whoami-certs.yml
#who ami
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-route
  namespace: whoami 
spec:
  entryPoints:
    - websecure 
  routes:
    - match: Host(`lukflk.run.place`)
      kind: Rule
      services:
        - kind: Service
          name: whoami
          port: 80
          namespace: whoami
  tls:
    secretName: cert-falksolu
